# envdiff

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  USAGE.md
src/envdiff/: __init__.py  cli.py  diff.py  formatters.py  parser.py
tests/: test_cli.py  test_diff.py  test_parser.py
