[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Compare .env files — see missing keys, value differences, and validate against examples."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "farkhad" }]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
envdiff = "envdiff.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/envdiff"]
